Fix HTML encoding issues in index.html

--- a/Portfolio Soumyaranjan Behera/index.html
+++ b/Portfolio Soumyaranjan Behera/index.html
@@ -43,7 +43,7 @@
                 <div class="social-icon">
                     <div class="github icon">
                         <!-- <div class="tooltip">GitHub</div> -->
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/Bsoumyaranjan32"><i class="fa-brands fa-github"></i></a>
                     </div>
 
                     <div class="linkedin icon">
@@ -261,4 +261,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
