--- a/Portfolio Soumyaranjan Behera/index.html
+++ b/Portfolio Soumyaranjan Behera/index.html
@@ -48,7 +48,7 @@
 
                     <div class="linkedin icon">
                         <!-- <div class="tooltip">LinkedIn</div> -->
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/soumyaranjan-behera-497ba833a/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
 
                     <div class="twitter icon">
@@ -263,3 +263,4 @@
 </body>
 
 </html>
+
